<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">AnyMemo</string>
    <string name="app_full_name">AnyMemo</string>
    <string name="website_versions_view">https://anymemo.org/versions-view</string>
    <string name="ok_text">OK</string>
    <string name="cancel_text">Cancel</string>
    <string name="yes_text">Yes</string>
    <string name="no_text">No</string>
    <string name="back_menu_text">Back</string>
    <string name="detail_menu_text">Detail</string>
    <string name="settings_menu_text">Settings</string>
...
    <string name="settings_answer_locale_prompt">Locale</string>
    <string name="settings_html_display">Display in HTML</string>
    <string name="settings_ratio">Q/A display ratio</string>
    <string name="settings_wipe">Wipe all learning progress</string>
    <string name="settings_shuffle">Shuffle all cards</string>
    <string name="settings_inverse">Swap the Q/A of all cards</string>
    <string name="settings_save">Save</string>
    <string name="warning_text">Warning</string>
    <string name="settings_wipe_warning">ALL learning progress will be reset!</string>
    <string name="settings_shuffle_warning">This operation will shuffle all cards and can NOT be undone.</string>
    <string name="settings_inverse_warning">This operation will swap the location of question and answer. Swap&amp;dup will add all swapped cards to the back of current database instead of replacing.</string>
    <string name="delete_warning">Do you really want to delete this card?</string>
    <string name="skip_text">Skip</string>
...
    <string name="day_text">day</string>
    <string name="quiz_text">Quiz</string>
    <string name="quiz_by_group_text">Quiz by group</string>
    <string name="quiz_by_category_text">Quiz by category</string>
    <string name="quiz_group_size_text">Quiz group size</string>
    <string name="quiz_group_number_text">Quiz group number</string>
    <string name="start_quiz_text">Start quiz</string>
    <string name="override_audio_warning_text">Are you sure you want to override current audio?</string>
    <string name="enable_animation_text">Enable animation</string>
    <string name="enable_animation_summary">Enable the animation for card transition.</string>
    <string name="quiz_completed_text">Quiz completed</string>
    <string name="new_cards_completed_summary">You have completed the quiz. Do you want to review it?</string>
    <string name="review_text">Review</string>
...
    <string name="record_audio_permission_denied_message">AnyMemo could not get permission to record audio.</string>
    <string name="write_storage_permission_denied_message">AnyMemo could not get permission to write db file on external storage.</string>
    <string name="db_file_is_corrupted_text">DB file is corrupted</string>
    <string name="clear_text">Clear</string>
    <string name="change_directory_permission_denied_message">AnyMemo could not get permission to change to the directory.</string>
    <string name="directory_empty_text">(Empty directory)</string>
    <string name="more_text">MORE</string>
    <string name="dropbox_item_description">Date: %1$s&lt;br&gt;Size: %2$d bytes</string>
    <string name="locale_esperanto_text">Esperanto</string>
    <string name="google_sign_in_not_successful_error_text">Google sign in is not successful</string>
    <string name="google_sign_in_empty_error_text">Google sign in result is empty</string>
    <string name="google_sign_in_account_empty_result">Unable to get Google account</string>
    <string name="show_hint">Show hint</string>
    <string name="picture_hint" translatable="false">Picture hint</string>
    <string name="multiple_choice_hint">Multiple choice hint</string>
    <string name="letter_hint">Letter hint</string>
    <string name="favourite_text">Mark as Favourite</string>
    <string name="error_programmatic">You should enter \'ciao\' here</string>

    <string name="spell_hint_text">Spell hint edit text </string>
    <string name="spell_hint">Type out the answer</string>
    <string name="add_to_study_mode">Add to study mode</string>
...
